Wed May 21 21:34:53 2003  Joern Thyssen  <jth@gnubg.org>

	* play.c (ComputerTurn): try to eliminate noise in
	resignations.	
	(reported by Bille Patterson)

Wed May 21 21:21:41 2003  Joern Thyssen  <jth@gnubg.org>

	* gtkgame.c (ShowManualWeb, ReportBug): new functions.

	* openurl.c: new file. URL support for windows and *nix.

Wed May 21 20:35:56 2003  Joern Thyssen  <jth@gnubg.org>

	* import.c (ParseSnowieTxt): strsep is not ANSI. Use new
	NextTokenGeneral.	

	* gnubg.c (NextTokenGeneral): new almost, but not quite general
	tokeniser.

Mon May 19 22:20:43 2003  Joern Thyssen  <jth@gnubg.org>

	* eval.c (FindnSaveBestMoves): bugfix: missing update of nMaxPly.
	* eval.c (FindnSaveBestMoves): bugfix: fix logic for evaluating
	actual move on nMaxPly.
	(reported by Ian Shaw)

Mon May 19 22:02:52 2003  Joern Thyssen  <jth@gnubg.org>

	* eval.c (FindnSaveBestMoves): force evaluation for accept=1 and 
	cMoves=1.
	(reported by Michael Depreli)

Mon May 19 21:32:24 2003  Joern Thyssen  <jth@gnubg.org>

	* import.c (ParseSnowieTxt): use strsep instead of strtok
	to allow blank fields
	(reported by Michael Depreli)

Mon May 19 19:59:38 2003  Joern Thyssen  <jth@gnubg.org>

	* gtkboard.c (Confirm): use FormatMovePlain to avoid translation
	of "off" to, say, "af".
	(reported by Klaus Rindholt)

Sun May 18 13:35:40 2003  Joern Thyssen  <jth@gnubg.org>

	* gnubg.c (outputx): revert previous fix.
	* gnubg.c (output): this function seems to be the correct place
	to flush.
	(suggested by Henrik Ravn)

Sun May 18 12:50:43 2003  Joern Thyssen  <jth@gnubg.org>

	* gnubg.c (outputx): add fflush.
	(suggested by Henrik Ravn)

Fri May 16 10:00:54 2003  Joern Thyssen  <jth@gnubg.org>

	Fix problems with _af_ulaw2linear in Redhat 9 
	(reported by Rod Roark)

	* configure.in, m4/audiofile.m4: autoconf magic for audiofile
	* sound.c: define _af_ulaw2linear if the user doesn't have audiofile.

Thu May 15 19:20:03 2003  Joern Thyssen  <jth@gnubg.org>
