@@ -1,3 +1,8 @@
+Wed May 21 22:20:32 2003  Joern Thyssen  <jth@gnubg.org>
+
+	* external.c (CommandExternal): swap sides for turn=0.
+	(reported by Rod Roark)
+
 Wed May 21 21:34:53 2003  Joern Thyssen  <jth@gnubg.org>
 
 	* play.c (ComputerTurn): try to eliminate noise in
